--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,14 @@
 
 html {
   box-sizing: border-box;
+
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+header {
+  background-color: #70ad55;
+  color: #fff;
 }
