--- a/css/main.css
+++ b/css/main.css
@@ -30,3 +30,10 @@ button {
   background-color: #6e8c62;
   border-color: #6e8c62;
 }
+
+input,
+select,
+label,
+textarea {
+  border-color: #6e8c62;
+}
